// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cookie Disclaimer component when first loaded should render correctly 1`] = `
<div
  className="container"
  onTransitionEnd={[Function]}
>
  <div
    className="positionWrapper"
  >
    <div
      aria-label="cookie emoji"
      className="cookieEmoji notificationElement"
      role="img"
    />
    <span
      className="message text notificationElement"
    >
      Attention! This site uses cookies.
       
      <button
        className="learnMoreBtn text"
        onClick={[Function]}
        type="button"
      >
        Learn More
      </button>
    </span>
    <button
      className="tick notificationElement"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;

exports[`Cookie Disclaimer component when first loaded should then apply the loaded class 1`] = `
<CookieDisclaimerMessage
  learnMoreClicked={[MockFunction]}
>
  <div
    className="container loaded"
    onTransitionEnd={[Function]}
  >
    <div
      className="positionWrapper"
    >
      <div
        aria-label="cookie emoji"
        className="cookieEmoji notificationElement"
        role="img"
      />
      <span
        className="message text notificationElement"
      >
        Attention! This site uses cookies.
         
        <button
          className="learnMoreBtn text"
          onClick={[Function]}
          type="button"
        >
          Learn More
        </button>
      </span>
      <button
        className="tick notificationElement"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</CookieDisclaimerMessage>
`;

exports[`Cookie Disclaimer component when first loaded when the user accepts the policy after the transition ends should render null 1`] = `""`;

exports[`Cookie Disclaimer component when first loaded when the user accepts the policy should render correctly 1`] = `
<CookieDisclaimerMessage
  learnMoreClicked={[MockFunction]}
>
  <div
    className="container closed"
    onTransitionEnd={[Function]}
  >
    <div
      className="positionWrapper"
    >
      <div
        aria-label="cookie emoji"
        className="cookieEmoji notificationElement"
        role="img"
      />
      <span
        className="message text notificationElement"
      >
        Attention! This site uses cookies.
         
        <button
          className="learnMoreBtn text"
          onClick={[Function]}
          type="button"
        >
          Learn More
        </button>
      </span>
      <button
        className="tick notificationElement"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</CookieDisclaimerMessage>
`;

exports[`Cookie Disclaimer component when first loaded when the user clicks learn more after the transition ends should render null 1`] = `""`;

exports[`Cookie Disclaimer component when first loaded when the user clicks learn more should render correctly 1`] = `
<CookieDisclaimerMessage
  learnMoreClicked={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="container closed"
    onTransitionEnd={[Function]}
  >
    <div
      className="positionWrapper"
    >
      <div
        aria-label="cookie emoji"
        className="cookieEmoji notificationElement"
        role="img"
      />
      <span
        className="message text notificationElement"
      >
        Attention! This site uses cookies.
         
        <button
          className="learnMoreBtn text"
          onClick={[Function]}
          type="button"
        >
          Learn More
        </button>
      </span>
      <button
        className="tick notificationElement"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</CookieDisclaimerMessage>
`;
